--- a/CNCMaps.Renderer.GUI/app.config
+++ b/CNCMaps.Renderer.GUI/app.config
@@ -8,13 +8,13 @@
   <userSettings>
     <CNCMaps.GUI.Properties.Settings>
       <setting name="input" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="mixdir" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="output" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="outputjpgq" serializeAs="String">
         <value>90</value>
@@ -23,7 +23,7 @@
         <value>6</value>
       </setting>
       <setting name="customfilename" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="engineauto" serializeAs="String">
         <value>True</value>
@@ -44,7 +44,7 @@
         <value>False</value>
       </setting>
       <setting name="modconfigfile" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="emphore" serializeAs="String">
         <value>False</value>
@@ -68,7 +68,7 @@
         <value>False</value>
       </setting>
       <setting name="renderprog" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="outputauto" serializeAs="String">
         <value>False</value>
@@ -86,7 +86,7 @@
         <value>True</value>
       </setting>
       <setting name="email" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="markers" serializeAs="String">
         <value>None</value>
@@ -145,6 +145,6 @@
     </CNCMaps.GUI.Properties.Settings>
   </userSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
 </configuration>
